# nuspace

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT_GUIDE_GCP_AUTH.md  Dockerfile  Dockerfile_celery  Dockerfile_static_builder  Dockerfile_vite  LICENSE  README.md  build.docker-compose.yaml  docker-compose.build.yaml  docker-compose.monitoring.yaml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  prod.docker-compose.yml  pyproject.toml  services.py  test.py  tickets.py
backend/: Dockerfile  Dockerfile_celery  README.md  __init__.py  alembic.ini  app.py  lifespan.py  main.py  pyproject.toml  start.sh
backend/app_state/: bot.py  db.py  gcp.py  google_bucket.py  meilisearch.py  rbq.py  redis.py
backend/celery_app/: celery_config.py  tasks.py
backend/common/: cruds.py  dependencies.py  notification.py  request_url.py  schemas.py  utils.py
backend/common/utils/: enums.py  meilisearch.py  response_builder.py
backend/core/configs/: .env.example  config.py  nginx.conf  nginx.dev.conf  ngrok.yml  redis.conf
backend/core/database/: manager.py
backend/core/utils/: gcp_auth.py
backend/middlewares/: prometheus_metrics.py
backend/migrations/: README  env.py  migrate.py
backend/migrations/versions/: 0001_create_grade_reports_table.py  0d1c2b3a4f5e_create_opportunities_digest_table.py  1691549e89c9_transition_from_old_to_new_courses.py  183fea04d6e8_added_verification_badge_to_communities.py  18da0a04711e_set_default_false_on_communities_.py  1ff9b347b5f3_initial_events_bootstrap.py  2585ff06573e_added_templates.py  2659177a3d3a_add_registration_link_to_events_table.py  28748381dea2_added_sgotinish.py  31ef04faea30_regen_create_grade_reports_from_current_.py  54efff350322_add_community_photo_albums.py  5bcd77fc5bda_added_student_schedule.py  8299a73354e9_added_indexing.py  84822b5a285d_add_sg_assignment_tracking.py  8f4c32e1215d_add_departments_is_special.py  93a473924e2c_added_gpa_calc_tables.py  9aafcb4e4c98_initial_schema.py  9b58a6564166_adding_warpkeys_for_sgotinish.py  a1b2c3d4e5f6_remove_product_and_review_tables.py  a88f9a3cf2d5_add_album_metadata_fields.py  a9e8f7d6c5b4_add_community_achivements_table.py  b2f1c8d4a7e9_remove_rejection_board.py  b7c8f2a1d3e4_dedup_courses_by_registrar_id.py  bcb1ca0ddd00_add_recruitment_to_event_type_enum.py  c2f3b1c4a1d0_add_degree_audit_results.py  c8dc2ede9974_merge_duplicate_student_courses.py  cb29ee4e7ca3_add_community_photo_albums.py  d07224c89b5d_added_opp_table.py  d0bf926cce2a_added_entity_type_tickets.py  d14a65eff7cc_initial.py  de873a88b9db_add_end_datetime_to_events_table.py  df3b09aac8a7_adding_cps_school.py  e4b7aebbfde1_add_planner_tables.py  e8fc7f0261d4_add_rejection_board.py  ec352e8c5988_full_anon_rej_board.py  f57d3dcb5d7b_remove_unused_planner_fields.py  fb04158b1dea_add_grades_to_entity_type_enum.py  ff17af4961b9_obtained_max_course_scores.py
backend/modules/: __init__.py
backend/modules/announcements/: __init__.py  api.py  router.py  schemas.py  service.py
backend/modules/auth/: README.md  api.py  app_token.py  auth.py  cookies.py  cruds.py  dependencies.py  keycloak_manager.py  mock.py  oauth.py  repository.py  service.py  utils.py
backend/modules/bot/: README.md  bot.py  consts.py  cruds.py  hints_command.py
backend/modules/calendar/: google_calendar_service.py
backend/modules/campuscurrent/: base.py
backend/rbq/: consumer.py  producer.py  schemas.py  tasks.py
backend/routes/: __init__.py
backend/tests/: __init__.py  conftest.py
docs/: TODO.md  (+3 more)
(+1607 files in other folders)
